waybar/.config/waybar/style.css
@import "colours/solarized_light.css";

* {
  border-radius: 0;
  border: none;
  font-family: "JetBrainsMono Nerd Font Propo", Inter, sans-serif;
  font-size: 13px;
  font-weight: 500;
  margin: 0;
  min-height: 0;
  padding: 0;
}

window#waybar {
  background-color: transparent;
  color: @fg1;
}

.modules-left {
  background-color: @bg2;
  border-radius: 40px;
  border: 1px solid @fg3;
  margin-left: 6px;
  margin-right: 6px;
  padding: 0 12px;
}

.modules-center {
  background-color: @bg2;
  border-radius: 40px;
  border: 1px solid @fg3;
  padding: 0 12px;
}

.modules-right {
  background-color: @bg2;
  border-radius: 40px;
  border: 1px solid @fg3;
  margin-right: 6px;
  padding: 0 12px;
}

tooltip {
  background-color: @bg2;
  border-radius: 12px;
  border: 1px solid @fg3;
}

tooltip label {
  padding: 6px;
  font-family: "JetBrainsMono Nerd Font Propo", Inter, sans-serif;
  font-size: 13px;
}

#workspaces {
  background-color: @bg2;
  color: @fg3;
}

#workspaces button {
  background-color: @bg2;
  box-shadow: inset 0 -2px @blue;
  color: @fg1;
  font-weight: bold;
  padding: 4px 12px;
  transition: all 0.3s ease-in-out;
}

#workspaces button.active {
  background-color: @blue;
  color: @bg2;
  transition: all 0.3s ease-in-out;
}

#workspaces button.empty {
  box-shadow: none;
  color: @fg3;
}

#workspaces button:hover {
  background-color: @violet;
  background-size: 400% 400%;
  box-shadow: none;
  color: @bg2;
}

#workspaces button.urgent {
  background-color: @red;
  background-size: 400% 400%;
  box-shadow: none;
  color: @bg2;
  transition: all 0.3s ease-in-out;
}

#clock,
#keyboard-state,
#idle_inhibitor,
#pulseaudio,
#network,
#cpu,
#memory,
#tray,
#custom-clipboard,
#custom-notification {
  background-color: @bg2;
  color: @fg1;
  padding: 2px 12px;
}

#keyboard-state {
  color: @fg3;
}

#keyboard-state label.locked {
  color: @red;
}

#idle_inhibitor {
  color: @fg3;
}

#idle_inhibitor.activated {
  color: @green;
}

#pulseaudio.muted {
  color: @bg1;
}

#network.disconnected {
  color: @red;
}

#tray > .passive {
  -gtk-icon-effect: dim;
}

#tray > .needs-attention {
  -gtk-icon-effect: highlight;
}

#custom-clipboard,
#custom-notification {
  font-size: 16px;
}

